# class-media-art

./: .gitignore  README.md  pyproject.toml
app/: app.py
app/static/: shader.frag  shader.vert  shader_template.frag  sketch.js
app/templates/: index.html
