[tool.poetry]
name = "mediaart-backend"
version = "0.1.0"
description = ""
authors = ["DESKTOP-V63MRH9\\kazus <kazushi.02140413@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
